动态创建表单；绑定事件的兼容代码

--- a/JavaScript/028动态创建表格.html
+++ b/JavaScript/028动态创建表格.html
@@ -62,7 +62,7 @@
                 tdObj1.innerText=tableArr[i].name;
                 trObj.appendChild(tdObj1);
                 var tdObj2=document.createElement("td");
-                tdObj2.innerHTML="<a href='"+tableArr[i].href+"'>"+tableArr[i].name+"</a>";
+                tdObj2.innerHTML="<a href='"+tableArr[i].href+"'>点我进入"+tableArr[i].name+"</a>";
                 trObj.appendChild(tdObj2);
             }
         }
