--- a/JavaScript/033倒计时-注册协议按钮.html
+++ b/JavaScript/033倒计时-注册协议按钮.html
@@ -33,7 +33,7 @@
 </head>
 <body>
 <div class="box">
-    <textarea name="text" id="text" readonly>尊敬的客户，欢迎您注册成为本网站用户，在注册前请仔细阅读如下服务条款： “XXX”网站（www.XXXXXXXX.com，以下简称“XXXX”或“XX”）由北京XXXXX有限公司(以下简称“本公司”)运营管理，并根据本协议的规定向恒易融用户提供服务。本协议双方为恒易融用户与本公司，适用于用户注册使用本网站服务的全部活动。在注册本网站之前，请您务必认真阅读并充分理解本协议全部内容。您点击本协议下方的“注册”按钮，并按照本网站注册程序成功成为注册为用户 ，即视为您已经充分理解和同意本协议全部内容，并签署了本协议，本协议立即在您与本公司之间产生合同法律效力，您使用本网站服务的全部活动将受到本协议的 约束并应承担相应的责任和义务。</textarea>
+    <textarea name="text" id="text" readonly title="User Agreement">尊敬的客户，欢迎您注册成为本网站用户，在注册前请仔细阅读如下服务条款： “XXX”网站（www.XXXXXXXX.com，以下简称“XXXX”或“XX”）由北京XXXXX有限公司(以下简称“本公司”)运营管理，并根据本协议的规定向恒易融用户提供服务。本协议双方为恒易融用户与本公司，适用于用户注册使用本网站服务的全部活动。在注册本网站之前，请您务必认真阅读并充分理解本协议全部内容。您点击本协议下方的“注册”按钮，并按照本网站注册程序成功成为注册为用户 ，即视为您已经充分理解和同意本协议全部内容，并签署了本协议，本协议立即在您与本公司之间产生合同法律效力，您使用本网站服务的全部活动将受到本协议的 约束并应承担相应的责任和义务。</textarea>
     <input type="button" id="accept" value="请阅读协议(5)" disabled>
     <input type="button" id="refuse" value="不同意">
 </div>
