自动滚动的轮播图

--- a/JavaScript/037无缝轮播图.html
+++ b/JavaScript/037无缝轮播图.html
@@ -33,7 +33,7 @@
         .carousel-figure ul {
             position: absolute;
             list-style: none;
-            width: 3600px;
+            width: 4500px;
         }
 
         li {
@@ -45,11 +45,12 @@
     <!--相框-->
     <div class="carousel-figure">
         <ul>
-            <li><a href="#"><img src="./images/雪原.jpg" alt=""></a></li>
             <li><a href="#"><img src="./images/坎布拉.jpg" alt=""></a></li>
             <li><a href="#"><img src="./images/栈桥.jpg" alt=""></a></li>
-            <!--为了无缝效果，需要重复第一张图片-->
+            <li><a href="#"><img src="./images/长城.jpg" alt=""></a></li>
             <li><a href="#"><img src="./images/雪原.jpg" alt=""></a></li>
+            <!--为了无缝效果，需要重复第一张图片-->
+            <li><a href="#"><img src="./images/坎布拉.jpg" alt=""></a></li>
         </ul>
     </div>
 </div>
