--- a/JavaScript/043获取元素样式.html
+++ b/JavaScript/043获取元素样式.html
@@ -24,7 +24,7 @@
     }
 
     // 测试
-    console.log(getElementAttribute(document.getElementById('box'), "background"));
+    console.log(getElementStyle(document.getElementById('box'), "background"));
 </script>
 </body>
 </html>
