兼容代码：变速修改一个属性的函数

--- a/JavaScript/044变速动画修改一个属性的兼容代码.html
+++ b/JavaScript/044变速动画修改一个属性的兼容代码.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>封装变速动画动画</title>
+    <title>封装变速动画动画-修改一个属性</title>
     <style>
         #box   {
             width: 100px;
