大量文字的拼接(允许表格内换行)

--- a/JavaScript/053无刷新评论.html
+++ b/JavaScript/053无刷新评论.html
@@ -38,7 +38,8 @@
         tr td:last-child {
             width: 400px;
             padding-left: 10px;
-            overflow: hidden;
+            /*允许表格内换行*/
+            word-break: break-word;
         }
 
         #username {
