--- a/JavaScript/059原型链指向和原型指向的改变.html
+++ b/JavaScript/059原型链指向和原型指向的改变.html
@@ -13,7 +13,7 @@
         this.age = age;
     }
 
-    // 任何构造函数的原型对象中都有__proto__且指向构造函数的原型对象，只有Object.__proto__指向null
+    // 任何构造函数的原型对象中都有__proto__，只有Object.__proto__指向null
     var dog = new Dog(20);
     console.log(Dog.prototype === dog.__proto__); // true
     console.log(Dog.prototype.__proto__ === dog.__proto__.__proto__); // true
