通过原型实现继承

--- a/JavaScript/060通过原型实现继承.html
+++ b/JavaScript/060通过原型实现继承.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>继承</title>
+    <title>通过原型实现继承</title>
 </head>
 <body>
 <script>
     /*
     *
-    * js中继承是通过改变原型对象的指向来实现的
+    * js中继承可以通过改变原型对象的指向来实现
     *
     * 继承是一种父类(class)与子类之间的关系
     * JS中没有类(class)的概念，但是可以通过构造函数来模拟类
