--- a/JavaScript/067高阶函数.html
+++ b/JavaScript/067高阶函数.html
@@ -70,7 +70,7 @@
         // 正序排列
         if (a > b) {
             return 1;
-        } else if (a == b) {gcjqh
+        } else if (a == b) {
             return 0;
         } else if (a < b) {
             return -1;
